--- a/src/style/app.sass
+++ b/src/style/app.sass
@@ -1,11 +1,4 @@
-body
-  margin: 0
-  background-image: url("../images/background.jpg")
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap')
 
-.background-image
-  position: fixed
-  top: 0
-  left: 0
-  right: 0
-  bottom: 0
-  filter: blur(128px)
+@import "main"
+@import "button"
