Improve adaptive design

--- a/src/style/button.sass
+++ b/src/style/button.sass
@@ -6,6 +6,7 @@
   width: 200px
   display: flex
   align-items: center
+  margin: 16px
 
   padding: 16px 32px 16px 24px
   backdrop-filter: blur(8px)
@@ -42,6 +43,7 @@
   align-content: space-between
   min-height: 180px
   flex-wrap: wrap
+  margin: auto
 
   @media screen and (min-width: 1000px)
     width: 50vw
