--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -8,8 +8,10 @@ body
   background-size: cover
   background-position: center
   font-family: 'Raleway', sans-serif
-  height: 100vh
   font-size: 1.25em
+
+  @media screen and (min-width: 1000px)
+    height: 100vh
 
 main
   margin: auto
