--- a/src/style/button.sass
+++ b/src/style/button.sass
@@ -13,6 +13,8 @@
   transition: .5s
   background-color: rgba(255, 255, 255, .1)
   border-radius: 8px
+  border: 1px solid rgba(255, 255, 255, 0.1)
+  box-shadow: 0 0 32px 0 rgba(255, 255, 255, 0.1)
 
   &:hover
     transition: .5s
