--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -29,3 +29,16 @@ main
   height: 200vh
   filter: blur(128px)
   z-index: 0
+
+hr
+  opacity: 0.5
+
+  @media screen and (max-width: 1000px)
+    width: 75vw
+
+p
+  padding-left: 16px
+  padding-right: 16px
+
+  @media screen and (min-width: 1000px)
+    width: 50vw
