--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -27,7 +27,7 @@ main
   bottom: -50vh
   width: 200vw
   height: 200vh
-  filter: blur(128px)
+  filter: blur(128px) brightness(75%)
   z-index: 0
 
 hr
