--- a/src/styles/options.sass
+++ b/src/styles/options.sass
@@ -1,5 +1,6 @@
 $primary-foreground-color: #EEEEEE
-$primary-background-color: #1A1A1A
-
-$accent-background-color: #FFFF00
 $accent-foreground-color: #111111
+
+$primary-background-color: #1A1A1A
+$accent-background-color: #FFFF00
+$selection-background-color: lighten($primary-background-color, 5)
