--- a/src/components/Contact.module.sass
+++ b/src/components/Contact.module.sass
@@ -2,7 +2,7 @@
 @import "./Contacts.module"
 
 .contact
-  transition: all .5s, outline 50ms
+  transition: all .5s, outline 50ms, outline-offset 50ms
   display: flex
   align-items: center
 
@@ -34,4 +34,5 @@
     cursor: pointer
 
   &:active
+    outline-offset: 2px
     outline: $accent-background-color solid 2px
