Project page layout draft

--- a/src/components/Title.module.sass
+++ b/src/components/Title.module.sass
@@ -1,19 +1,13 @@
 @import "../styles/options"
 
-.wrapper
-  width: min-content
-  font-size: 1.5em
-  transition: 1s
-
-  h1
-    margin: 0 0 0 -0.05em
-    display: block
-    font-size: 5em
-    line-height: 0.9em
-
-  p
-    line-height: 1em
-    margin: 0
-
 .title
-  margin-bottom: 16px
+  width: min-content
+  margin-top: 32px
+
+  &:after
+    margin: 12px 0
+    display: block
+    content: ''
+    width: 100%
+    height: 6px
+    background-color: $accent-background-color
