--- a/src/components/Contact.module.sass
+++ b/src/components/Contact.module.sass
@@ -12,10 +12,15 @@
     width: $size
     height: $size
     padding: 8px
+    font-size: 32px
 
     display: flex
     justify-content: center
     align-items: center
+
+    svg
+      max-width: 32px
+      max-height: 32px
 
   .descriptionWrapper
     padding: 0 16px
